Fix iOS 14.5 embedded build https://bugs.webkit.org/show_bug.cgi?id=225835 <rdar://problem/78039315>

Reviewed by Dewei Zhu.

Source/WebKit:

No new tests, build fix.

* WebProcess/cocoa/WebProcessCocoa.mm: Import mach.h.

Tools:

* Scripts/configure-xcode-for-embedded-development: Add mach.h, mach_error.h and task.h.


Canonical link: https://commits.webkit.org/237754@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277526 268f45cc-cd09-0410-ab3c-d52691b4dbfc